--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v1
       # Install NodeJS
-      - name: Use Node.js 18.x
+      - name: Use Node.js 18.17.1
         uses: actions/setup-node@v1
         with:
           node-version: 18.x
